-------------------------------------------------------------------------------
                             wxWidgets Change Log
-------------------------------------------------------------------------------

INCOMPATIBLE CHANGES SINCE 2.8.x
================================

Unicode-related changes
-----------------------

The biggest changes in wxWidgets 3.0 are the changes due to the merge of the
old ANSI and Unicode build modes in a single build. See the Unicode overview
in the manual for more details but here are the most important incompatible
changes:

- Many wxWidgets functions taking "const wxChar *" have been changed to take
  either "const wxString&" (so that they accept both Unicode and ANSI strings;
  the argument can't be NULL anymore in this case) or "const char *" (if the
  strings are always ANSI; may still be NULL). This change is normally
  backwards compatible except:

  a) Virtual functions: derived classes versions must be modified to take
     "const wxString&" as well to make sure that they continue to override the
     base class version.

  b) Passing NULL as argument: as NULL can't be unambiguously converted to
     wxString, in many cases code using it won't compile any more and NULL
     should be replaced with an empty string.


- Some structure fields which used to be of type "const wxChar *" (such as
  wxCmdLineEntryDesc::shortName, longName and description fields) are now of
  type "const char *", you need to remove wxT() or _T() around the values used
  to initialize them (which should normally always be ASCII).

- wxIPC classes didn't work correctly in Unicode build before, this was fixed
  but at a price of breaking backwards compatibility: many methods which used
  to work with "wxChar *" before use "void *" now (some int parameters were
  also changed to size_t). While wxIPC_TEXT can still be used to transfer 7
  bit text, the new wxIPC_UTF8TEXT format is used for transferring wxStrings.